--- a/email-service/src/main/resources/application.properties
+++ b/email-service/src/main/resources/application.properties
@@ -1,12 +1,18 @@
-
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=vr.jayapriya@gmail.com
-spring.mail.password=nehruram
+spring.mail.username=username
+spring.mail.password=password
 spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.starttls.required=false
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.writetimeout=5000
+spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
+spring.mail.properties.mail.smtp.socketFactory.fallback=true
 spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+spring.mail.properties.mail.smtp.socketFactory.port=587
+spring.mail.properties.mail.smtp.host=smtp.gmail.com
+spring.mail.properties.mail.smtp.port=587
+spring.mail.properties.mail.smtp.ssl.enable=false
+spring.mail.properties.mail.transport.protocol=smtp
